fix tghe booking box on mobile

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7233,7 +7233,7 @@ nav .brand-logo {
 
   #booking .bodyText {
     padding: 1em;
-    width: 30%;
+    width: 90%;
     margin-top: 37%;
     background-size: cover;
     /* Fallback for web browsers that doesn't support RGBa */
